force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/discrepancy_log_number__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_log_number__c</fullName>
    <description>discrepancy_log_number</description>
    <externalDeveloperName>discrepancy_log_number</externalDeveloperName>
    <label>discrepancy_log_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>