force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/discrepancy_type__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_type__c</fullName>
    <description>discrepancy_type</description>
    <externalDeveloperName>discrepancy_type</externalDeveloperName>
    <label>discrepancy_type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>