force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/dw_ecard_app_dat_defect_code__c.field-meta.xml
<CustomField>
    <fullName>dw_ecard_app_dat_defect_code__c</fullName>
    <description>Defect code</description>
    <externalDeveloperName>dat_defect_code_id</externalDeveloperName>
    <label>dw_ecard_app$dat_defect_code</label>
    <length>18</length>
    <referenceTo>dw_ecard_app_dat_defect_code__x</referenceTo>
    <relationshipLabel>ecard_discrepancy_log</relationshipLabel>
    <relationshipName>dw_ecard_app_ecard_discrepancy_log</relationshipName>
    <type>ExternalLookup</type>
</CustomField>