force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/dw_ecard_app_ecard__c.field-meta.xml
<CustomField>
    <fullName>dw_ecard_app_ecard__c</fullName>
    <description>eCard</description>
    <externalDeveloperName>ecard_id</externalDeveloperName>
    <label>dw_ecard_app$ecard</label>
    <length>18</length>
    <referenceTo>dw_ecard_app_ecard__x</referenceTo>
    <relationshipLabel>dw_ecard_app$ecard_discrepancy_log</relationshipLabel>
    <relationshipName>dw_ecard_app_ecard_discrepancy_log</relationshipName>
    <type>ExternalLookup</type>
</CustomField>