force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/forman4_id__c.field-meta.xml
<CustomField>
    <fullName>forman4_id__c</fullName>
    <description>forman4_id</description>
    <externalDeveloperName>forman4_id</externalDeveloperName>
    <label>forman4_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>