force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/raised_status_updatedby_id__c.field-meta.xml
<CustomField>
    <fullName>raised_status_updatedby_id__c</fullName>
    <description>raised_status_updatedby_id</description>
    <externalDeveloperName>raised_status_updatedby_id</externalDeveloperName>
    <label>raised_status_updatedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>