force-app/main/default/objects/dw_ecard_app_ecard_discrepancy_log__x/fields/verified_status_updated_date__c.field-meta.xml
<CustomField>
    <fullName>verified_status_updated_date__c</fullName>
    <description>verified_status_updated_date</description>
    <externalDeveloperName>verified_status_updated_date</externalDeveloperName>
    <label>verified_status_updated_date</label>
    <type>DateTime</type>
</CustomField>